test/integration/bad/lang/stanc.expected
  $ ../../../../../install/default/bin/stanc bad1.stan

Syntax error in 'bad1.stan', line 1, column 8 to column 8, parsing error:
   -------------------------------------------------
     1:  model { 
                 ^
   -------------------------------------------------

Variable declaration, statement or "}" expected.


  $ ../../../../../install/default/bin/stanc bad10.stan

Semantic error in 'bad10.stan', line 2, column 8 to column 11:
   -------------------------------------------------
     1:  data {
     2:     real y__;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Identifier 'y__' clashes with reserved keyword.

  $ ../../../../../install/default/bin/stanc bad11.stan

Semantic error in 'bad11.stan', line 2, column 2 to column 12:
   -------------------------------------------------
     1:  parameters {
     2:    int theta;
           ^
     3:  }
     4:  model {
   -------------------------------------------------

(Transformed) Parameters cannot be integers.

  $ ../../../../../install/default/bin/stanc bad2.stan

Semantic error in 'bad2.stan', line 1, column 28 to column 36:
   -------------------------------------------------
     1:  data { real a[3]; } model { a = 2.0; }
                                     ^
   -------------------------------------------------

Cannot assign to global variable 'a' declared in previous blocks.

  $ ../../../../../install/default/bin/stanc bad3.stan

Syntax error in 'bad3.stan', line 1, column 21 to column 22, parsing error:
   -------------------------------------------------
     1:  data { real a; matrix(2,3) b; } model { a = b; }
                              ^
   -------------------------------------------------

Expected "[" expression "," expression "]" for sizes of matrix.


  $ ../../../../../install/default/bin/stanc bad4.stan

Semantic error in 'bad4.stan', line 1, column 38 to column 42:
   -------------------------------------------------
     1:  data { real a[5]; } model { for (n in a[1]:5) a[n] = n; }
                                               ^
   -------------------------------------------------

Lower bound of for-loop must be of type int. Instead found type real.

  $ ../../../../../install/default/bin/stanc bad5.stan

Semantic error in 'bad5.stan', line 3, column 6 to column 10:
   -------------------------------------------------
     1:  transformed data {
     2:    real y;
     3:    y = lp__;
               ^
     4:  }
     5:  model {
   -------------------------------------------------

Identifier 'lp__' clashes with reserved keyword.

  $ ../../../../../install/default/bin/stanc bad6.stan

Semantic error in 'bad6.stan', line 7, column 3 to column 12:
   -------------------------------------------------
     5:     real z;
     6:     
     7:     y = 10.0;
            ^
     8:  }
     9:  model {
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.

  $ ../../../../../install/default/bin/stanc bad7.stan

Semantic error in 'bad7.stan', line 7, column 2 to column 11:
   -------------------------------------------------
     5:    real z;
     6:  
     7:    y = 10.0;
           ^
     8:  }
     9:  model { 
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.

  $ ../../../../../install/default/bin/stanc bad8.stan

Semantic error in 'bad8.stan', line 5, column 4 to column 13:
   -------------------------------------------------
     3:  }
     4:  model {
     5:      y = 10.0;
             ^
     6:  }
   -------------------------------------------------

Cannot assign to global variable 'y' declared in previous blocks.

  $ ../../../../../install/default/bin/stanc bad9.stan

Semantic error in 'bad9.stan', line 5, column 3 to column 9:
   -------------------------------------------------
     3:  }
     4:  parameters {
     5:     int N;
            ^
     6:     real z[N];
     7:  }
   -------------------------------------------------

(Transformed) Parameters cannot be integers.

  $ ../../../../../install/default/bin/stanc bad_bounds1.stan

Syntax error in 'bad_bounds1.stan', line 2, column 15 to column 17, parsing error:
   -------------------------------------------------
     1:  data {
     2:    real<lower=1 && 2> x;
                        ^
     3:  }
     4:  parameters {
   -------------------------------------------------

">" or ", upper = expression (not containing binary logical operators) ">" expected after specifying lower bound for type.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_rvec_data.stan

Semantic error in 'bad_cov_exp_quad_arr_rvec_data.stan', line 13, column 41 to column 48:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
                                                  ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_rvec_param.stan

Syntax error in 'bad_cov_exp_quad_arr_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_vec_data.stan

Semantic error in 'bad_cov_exp_quad_arr_vec_data.stan', line 13, column 41 to column 48:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
                                                  ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_arr_vec_param.stan

Syntax error in 'bad_cov_exp_quad_arr_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_arr_2, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_data.stan

Semantic error in 'bad_cov_exp_quad_len_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: vector[], vector[], real, real[].

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_param.stan

Syntax error in 'bad_cov_exp_quad_len_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_rvec_param.stan

Syntax error in 'bad_cov_exp_quad_len_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_len_vec_param.stan

Syntax error in 'bad_cov_exp_quad_len_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_arr_data.stan

Semantic error in 'bad_cov_exp_quad_rvec_arr_data.stan', line 13, column 50 to column 57:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
                                                           ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_arr_param.stan

Syntax error in 'bad_cov_exp_quad_rvec_arr_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_data.stan

Semantic error in 'bad_cov_exp_quad_rvec_data.stan', line 12, column 28 to column 65:
   -------------------------------------------------
    10:    matrix[N_2, N_1] transformed_data_matrix;
    11:  
    12:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_sigma, d_len);
                                     ^
    13:  }
    14:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: row_vector, real, real.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_vec_data.stan

Semantic error in 'bad_cov_exp_quad_rvec_vec_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_2, N_1] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_rvec_1, d_vec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: row_vector[], vector[], real, real.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_rvec_vec_param.stan

Syntax error in 'bad_cov_exp_quad_rvec_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_rvec_1, d_vec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_data.stan

Semantic error in 'bad_cov_exp_quad_sigma_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: vector[], vector[], real[], real.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_param.stan

Syntax error in 'bad_cov_exp_quad_sigma_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_rvec_param.stan

Syntax error in 'bad_cov_exp_quad_sigma_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_sigma_vec_param.stan

Syntax error in 'bad_cov_exp_quad_sigma_vec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_param_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_arr_data.stan

Semantic error in 'bad_cov_exp_quad_vec_arr_data.stan', line 13, column 50 to column 57:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
                                                           ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Identifier 'd_arr_2' not in scope.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_arr_param.stan

Syntax error in 'bad_cov_exp_quad_vec_arr_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_arr_2, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_data.stan

Semantic error in 'bad_cov_exp_quad_vec_data.stan', line 12, column 28 to column 65:
   -------------------------------------------------
    10:    matrix[N_2, N_1] transformed_data_matrix;
    11:  
    12:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_sigma, d_len);
                                     ^
    13:  }
    14:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: vector, real, real.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_rvec_data.stan

Semantic error in 'bad_cov_exp_quad_vec_rvec_data.stan', line 13, column 28 to column 75:
   -------------------------------------------------
    11:    matrix[N_1, N_2] transformed_data_matrix;
    12:  
    13:    transformed_data_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
                                     ^
    14:  }
    15:  parameters {
   -------------------------------------------------

Ill-typed arguments supplied to function 'cov_exp_quad'. Available signatures: 
(real[], real, real) => matrix
(real[], real[], real, real) => matrix
(vector[], real, real) => matrix
(vector[], vector[], real, real) => matrix
(row_vector[], real, real) => matrix
(row_vector[], row_vector[], real, real) => matrix
Instead supplied arguments of incompatible type: vector[], row_vector[], real, real.

  $ ../../../../../install/default/bin/stanc bad_cov_exp_quad_vec_rvec_param.stan

Syntax error in 'bad_cov_exp_quad_vec_rvec_param.stan', line 17, column 0 to column 10, parsing error:
   -------------------------------------------------
    15:    transformed_params_matrix = cov_exp_quad(d_vec_1, d_rvec_1, d_sigma, d_len);
    16:  }
    17:  parameters {
         ^
    18:    real y;
    19:  }
   -------------------------------------------------

"model {" or "generated quantities {" expected after end of transformed parameters block.


  $ ../../../../../install/default/bin/stanc bad_periods_data.stan

Syntax error in 'bad_periods_data.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc bad_periods_gqs.stan

Syntax error in 'bad_periods_gqs.stan', line 8, column 7, lexing error:
   -------------------------------------------------
     6:  }
     7:  generated quantities {
     8:    real x.y;
                 ^
     9:    x.y = z * 2;
    10:  }
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc bad_periods_local.stan

Syntax error in 'bad_periods_local.stan', line 5, column 7, lexing error:
   -------------------------------------------------
     3:  }
     4:  model {
     5:    real x.y;
                 ^
     6:    z ~ normal(x.y,1);
     7:  }
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc bad_periods_params.stan

Syntax error in 'bad_periods_params.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  parameters {
     2:    real x.y;
                 ^
     3:  }
     4:  model {
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc bad_periods_tdata.stan

Syntax error in 'bad_periods_tdata.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x.y;
                 ^
     3:  }
     4:  parameters {
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc bad_periods_tparams.stan

Syntax error in 'bad_periods_tparams.stan', line 2, column 7, lexing error:
   -------------------------------------------------
     1:  transformed parameters {
     2:    real x.;
                 ^
     3:    x. = 1.0;
     4:  }
   -------------------------------------------------

Invalid character found.

  $ ../../../../../install/default/bin/stanc good_all.stan

Warning: deprecated language construct used in 'good_all.stan', line 1, column 0:
   -------------------------------------------------
     1:  # http://www.mrc-bsu.cam.ac.uk/bugs/winbugs/Vol2.pdf
         ^
     2:  # Page 23: Birats
     3:  ## 
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'good_all.stan', line 2, column 0:
   -------------------------------------------------
     1:  # http://www.mrc-bsu.cam.ac.uk/bugs/winbugs/Vol2.pdf
     2:  # Page 23: Birats
         ^
     3:  ## 
     4:  ## not works yet for some multi_normal specification issue
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'good_all.stan', line 3, column 0:
   -------------------------------------------------
     1:  # http://www.mrc-bsu.cam.ac.uk/bugs/winbugs/Vol2.pdf
     2:  # Page 23: Birats
     3:  ## 
         ^
     4:  ## not works yet for some multi_normal specification issue
     5:  
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'good_all.stan', line 4, column 0:
   -------------------------------------------------
     2:  # Page 23: Birats
     3:  ## 
     4:  ## not works yet for some multi_normal specification issue
         ^
     5:  
     6:  data {
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Semantic error in 'good_all.stan', line 25, column 2 to column 8:
   -------------------------------------------------
    23:  
    24:  model {
    25:    m = m;
           ^
    26:    rv = m[1];
    27:    s = m[1,2];
   -------------------------------------------------

Cannot assign to global variable 'm' declared in previous blocks.

  $ ../../../../../install/default/bin/stanc incomplete.stan

Syntax error in 'incomplete.stan', line 2, column 18 to column 19, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    real x = 2.0 .^ ;
                           ^
     3:  }
   -------------------------------------------------

Found an incomplete binary expression - are you missing the right hand side?


  $ ../../../../../install/default/bin/stanc incomplete2.stan

Syntax error in 'incomplete2.stan', line 2, column 17 to column 22, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    1.0 .^ upper[] while
                          ^
     3:  }
   -------------------------------------------------

Found a expression where we expected a statement. Is there a missing semi-colon here?
Or did you mean to use the preceding expression in:
* a function call
* a sampling statement
* the conditional in a for, while, or if statement
* assignment to a variable?


  $ ../../../../../install/default/bin/stanc incomplete3.stan

Syntax error in 'incomplete3.stan', line 2, column 10 to column 15, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% while (1) { print("hi"); }
                   ^
     3:  }
   -------------------------------------------------

Ill-formed expression. Expected expression after expression followed by "%/%".


  $ ../../../../../install/default/bin/stanc incomplete4.stan

Syntax error in 'incomplete4.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    2.0 %/% 1.0; while (1) { print("hi"); }
                      ^
     3:  }
   -------------------------------------------------

Found a expression where we expected a statement. Is there a missing semi-colon here?
Or did you mean to use the preceding expression in:
* a function call
* a sampling statement
* the conditional in a for, while, or if statement
* assignment to a variable?


  $ ../../../../../install/default/bin/stanc incomplete5.stan

Syntax error in 'incomplete5.stan', line 3, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    if (2.0) ;
         ^
   -------------------------------------------------

Ill-formed block. Expected a statement, variable declaration, or just "}".


  $ ../../../../../install/default/bin/stanc incomplete6.stan

Syntax error in 'incomplete6.stan', line 3, column 16 to column 21, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    print(upper[2.0]);
     3:    real x = sars[while (0)];
                         ^
     4:  }
   -------------------------------------------------

Expected an expression inside "[" and "]" but found a statement. Indexing should look like
  var[1 + i]
not
  var[for (n in 1:N) ...]


